- https://github.com/eclipse-sirius/sirius-web/issues/2883[#2883] [diagram] Add the attribute `resizedByUser` to reactflow nodes and graphql nodes.
- https://github.com/eclipse-sirius/sirius-web/issues/2926[#2926] [sirius-web] A new `IEditingContextProcessor` has been introduced.
It allows to execute operations before/after the load of an `IEditingContext` in `EditingContextSearchService`.


=== Dependency update

- [releng] The frontend now depends on @ObeoNetwork/gantt-task-react v0.3.13
- [releng] The frontend now depends on react-trello 2.2.11
- https://github.com/eclipse-sirius/sirius-web/issues/2842[#2842] Move to @ObeoNetwork/react-trello
- [releng] Switch to EMFJson 2.3.6-SNAPSHOT
- [releng] The frontend now depends on elkjs 0.8.2


=== Bug fixes

- https://github.com/eclipse-sirius/sirius-web/issues/2812[#2812] [trees] Fix an issue that prevents icon to be displayed in treeNodes.
- https://github.com/eclipse-sirius/sirius-web/issues/2580[#2580] [diagram] Cancel direct edit on 'Esc'.
- https://github.com/eclipse-sirius/sirius-web/issues/2778[#2778] [diagram] Authorize empty string for direct edit.
- https://github.com/eclipse-sirius/sirius-web/issues/2579[#2579] [diagram] Fix the invalid text cursor position when editing a label by typing text directly.
- https://github.com/eclipse-sirius/sirius-web/issues/2826[#2826] [diagram] Fix invalid reference position used for nodes with a depth superior to 2.
- https://github.com/eclipse-sirius/sirius-web/issues/2857[#2857] [form] Fix default reference widget bugs.
Now, for a multi-valued feature, the values are properly displayed and the delete is properly handled.
- https://github.com/eclipse-sirius/sirius-web/issues/2888[#2888] [view] Ensure that the retrieval of the view models returns properly loaded models
- https://github.com/eclipse-sirius/sirius-web/issues/2797[#2797] [diagram] Preserve diagram selection after change in the details view.