@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023, 2024 Obeo.
+ * Copyright (c) 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -11,9 +11,11 @@
  *     Obeo - initial API and implementation
  *******************************************************************************/
 
-import { GQLNodeDescription } from '../connector/useConnector.types';
-
-export interface ConnectionTargetHandleProps {
-  nodeId: string;
-  nodeDescription: GQLNodeDescription | undefined;
-}
+import { useEffect } from 'react';
+import { useUpdateNodeInternals } from 'reactflow';
+export const useRefreshTargetHandles = (id: string, shouldRefresh: boolean) => {
+  const updateNodeInternals = useUpdateNodeInternals();
+  useEffect(() => {
+    updateNodeInternals(id);
+  }, [shouldRefresh]);
+};
